[package]
name = "team-strength-data-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.5.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
reqwest = "0.11.1"
rss = "2.0.7"
tokio = "1.37.0"